src/objects/POC__c.object
<CustomObject>
    <fields>
        <fullName>LongTextArea__c</fullName>
        <label>LongTextArea</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TA1__c</fullName>
        <defaultValue>LEFT(LongTextArea__c, 255)</defaultValue>
        <label>TA1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TA2__c</fullName>
        <defaultValue>Left(LongTextArea__c, 256)</defaultValue>
        <label>TA2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TA3__c</fullName>
        <label>TA3</label>
        <type>TextArea</type>
    </fields>
    <label>POC</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>POC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POCS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>